--- a/ibrahim/index.html
+++ b/ibrahim/index.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1 style="color: blue;">Hello world</h1>
     <h2>Hello Ibrahim</h2>
     <h3>Hello 3</h3>
-    <h6>Hello W W 3</h6>
+    <h6 style="background-color: blueviolet;">Hello W W 3</h6>
+    <p>Lorem <a href="https://www.google.com/">ibrahim</a> dolor sit amet consectetur <br> adipisicing elit. Veniam quas laboriosam dolorum <br> at! Aspernatur corrupti, quia eligendi esse <br>consequatur dolorem amet possimus natus <br> Deserunt dolor inventore tenetur illo. Laborum, dicta?</p>
 </body>
 </html>
