--- a/ibrahim/Training Files/index.html
+++ b/ibrahim/Training Files/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+
+
+    </style>
 </head>
 <body>
     <h1 style="color: blue;">Hello world</h1>
@@ -12,4 +16,8 @@
     <h6 style="background-color: blueviolet;">Hello W W 3</h6>
     <p>Lorem <a href="https://www.google.com/">ibrahim</a> dolor sit amet consectetur <br> adipisicing elit. Veniam quas laboriosam dolorum <br> at! Aspernatur corrupti, quia eligendi esse <br>consequatur dolorem amet possimus natus <br> Deserunt dolor inventore tenetur illo. Laborum, dicta?</p>
 </body>
+<script>
+
+    
+</script>
 </html>
