--- a/ibrahim/Training Files/index2.html
+++ b/ibrahim/Training Files/index2.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First HTML Page</title>
+    <title>ibrahim</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            background-color: #f4f4f4;
+            background-color: #bab9b9;
         }
         h1 {
-            color: #333;
+            color: #d40000;
         }
         p {
-            color: #666;
+            color: #1c0cfa;
         }
         a {
-            color: #0066cc;
+            color: #eb0fa9;
         }
     </style>
 </head>
