--- a/ibrahim/Game1/index.html
+++ b/ibrahim/Game1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sliding Puzzle Game</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="ibrahim.css">
 </head>
 <body>
     <h1>Sliding Puzzle Game</h1>
@@ -12,6 +12,6 @@
         <!-- Puzzle tiles will be generated here -->
     </div>
     <button id="shuffle">Shuffle</button>
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
 </body>
 </html>
