--- a/ibrahim/Training Files/index2.html
+++ b/ibrahim/Training Files/index2.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            background-color: #bab9b9;
+            background-color: #b4b2b2;
         }
         h1 {
             color: #d40000;
